--- a/client/_index.html
+++ b/client/_index.html
@@ -24,6 +24,7 @@
       ga('create', 'UA-XXXXX-X');
       ga('send', 'pageview');
     </script>
+    <script src="https://js.braintreegateway.com/js/braintree-2.27.0.min.js"></script>
 
     <navbar></navbar>
     <div ng-view=""></div>
